--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"> -->
     <!-- <link href="https://file.myfontastic.com/7vRKgqrN3iFEnLHuqYhYuL/icons.css" rel="stylesheet"> -->
 
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script> -->
 
     <!-- pjw fontawesome.com -->
-    <script src="https://kit.fontawesome.com/4db0969a88.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/4db0969a88.js" crossorigin="anonymous"></script> -->
 
 </head>
 
@@ -691,7 +691,7 @@
             </div>
 
             <div class="paper-text">
-                <p>We release the BLB dataset rendered by Blender 2.93. The dataset contains 10 scenes, and each of them contains an all-in-focus image, a disparity map, a stack of bokeh images with 5 blur parameters and 10 refocused disparities, and a rendering parameter file. We additionally provide 15 corrupted disparity maps (through gaussian blur, dilation, erosion) for each scene. All 3D Blender models are downloaded from <a href="https://cloud.blender.org/p/gallery">https://cloud.blender.org/p/gallery</a> while our BLB dataset can be downloaded from <a href="https://drive.google.com/drive/folders/1URpab6AXQsNTqcBcighF73w5pFlvM0Ej?usp=sharing"><u>Google Drive</u></a> or <a href="https://pan.baidu.com/s/1U0XlFM_84-vVgnXGYz0ncQ?pwd=re8q"><u>Baidu Network Disk</u></a>.
+                <p>We release the BLB dataset rendered by Blender 2.93. The dataset contains 10 scenes, and each of them contains an all-in-focus image, a disparity map, a stack of bokeh images with 5 blur parameters and 10 refocused disparities, and a rendering parameter file. We additionally provide 15 corrupted disparity maps (through gaussian blur, dilation, erosion) for each scene. All 3D Blender models are downloaded from <a href="https://cloud.blender.org/p/gallery" target="_blank">https://cloud.blender.org/p/gallery</a> while our BLB dataset can be downloaded from <a href="https://drive.google.com/drive/folders/1URpab6AXQsNTqcBcighF73w5pFlvM0Ej?usp=sharing" target="_blank"><u>Google Drive</u></a> or <a href="https://pan.baidu.com/s/1U0XlFM_84-vVgnXGYz0ncQ?pwd=re8q" target="_blank"><u>Baidu Network Disk</u></a>.
             </div>
             <br>
             <table width="95%" align="center">
@@ -757,6 +757,6 @@
     <!-- Main JS -->
     <script src="js/myjs.js "></script>
     <script src="js/app.min.js "></script>
-    <script src="//localhost:35729/livereload.js"></script>
+    <!-- <script src="//localhost:35729/livereload.js"></script> -->
 </body>
 </html>
