--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
     <h2 style="margin-top: 10px;"><b>BokehMe: When Neural Rendering Meets<br>Classical Rendering</b></h2>
     <br>
     <div class="paper-author">
-        <a href="https://scholar.google.com/citations?hl=en&user=fYC6lCUAAAAJ">Juewen Peng</a><sup>1</sup>,&nbsp;
-        <a href="http://english.aia.hust.edu.cn/info/1085/1528.htm">Zhiguo Cao</a><sup>1</sup>,&nbsp;
-        <a href="https://scholar.google.com/">Xianrui Luo</a><sup>1</sup>,&nbsp;
-        <a href="http://faculty.hust.edu.cn/LUHAO/en/index.htm">Hao Lu</a><sup>1</sup>,&nbsp;
-        <a href="https://sites.google.com/site/kexian1991/">Ke Xian</a><sup>1</sup>,&nbsp;
-        <a href="https://jimmie33.github.io/">Jianming Zhang</a><sup>2</sup>
+        <a href="https://scholar.google.com/citations?hl=en&user=fYC6lCUAAAAJ" target="_blank">Juewen Peng</a><sup>1</sup>,&nbsp;
+        <a href="http://english.aia.hust.edu.cn/info/1085/1528.htm" target="_blank">Zhiguo Cao</a><sup>1</sup>,&nbsp;
+        <a href="https://scholar.google.com/" target="_blank">Xianrui Luo</a><sup>1</sup>,&nbsp;
+        <a href="http://faculty.hust.edu.cn/LUHAO/en/index.htm" target="_blank">Hao Lu</a><sup>1</sup>,&nbsp;
+        <a href="https://sites.google.com/site/kexian1991/" target="_blank">Ke Xian</a><sup>1</sup>,&nbsp;
+        <a href="https://jimmie33.github.io/" target="_blank">Jianming Zhang</a><sup>2</sup>
     </div>
     <br>
     <div class="paper-institution">
