--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.min.css">
-    <!-- <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <!-- <link href="https://file.myfontastic.com/7vRKgqrN3iFEnLHuqYhYuL/icons.css" rel="stylesheet"> -->
 
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
@@ -106,7 +106,7 @@
 <section id="gtco-counter" class="overlay bg-fixed">
     <div class="container">
         <div class="section-content">
-            <div class="row" style="height: 110px">
+            <div class="row" style="min-height: 115px">
                 <!-- Counter Item -->
                 <div class="col-md-3 col-sm-6 counter-item">
                     <a class="paper-icon nav-link" href="https://github.com/JuewenPeng/BokehMe" target="_blank">
@@ -114,7 +114,7 @@
                             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                         </svg>
                     </a>
-                    <h5 style="margin-top: 10px;">GitHub</h5>
+                    <h5 style="margin-top: 10px; height: 20px;">GitHub</h5>
                 </div>
                 <!-- End of Counter Item -->
                 <!-- Counter Item -->
@@ -125,7 +125,7 @@
                             <path d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"/>
                         </svg>
                     </a>
-                    <h5 style="margin-top: 10px;">Paper</h5>
+                    <h5 style="margin-top: 10px; height: 20px;">Paper</h5>
                 </div>
                 <!-- End of Counter Item -->
                 <!-- Counter Item -->
@@ -136,7 +136,7 @@
                             <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
                         </svg>
                     </a>
-                    <h5 style="margin-top: 10px;">Supplementary<br>Material</h5>
+                    <h5 style="margin-top: 10px; height: 20px;">Supplementary<br>Material</h5>
                 </div>
                 <!-- End of Counter Item -->
                 <!-- Counter Item -->
@@ -146,7 +146,7 @@
                             <path d="M512 0c-215.79776 0-448 65.06496-448 207.99488l0 608.01024c0 142.88896 232.20224 207.99488 448 207.99488 215.77728 0 448-65.1264 448-207.99488l0-608.01024c0-142.9504-232.26368-207.99488-448-207.99488zM896 816.00512c0 79.48288-171.9296 143.99488-384 143.99488-212.09088 0-384-64.512-384-143.99488l0-119.54176c66.10944 68.13696 225.60768 103.54688 384 103.54688s317.89056-35.4304 384-103.54688l0 119.54176zM896 624.00512l-0.12288 0c0 0.32768 0.12288 0.67584 0.12288 0.98304 0 79.01184-171.9296 143.01184-384 143.01184s-384-64-384-143.01184c0-0.32768 0.12288-0.67584 0.12288-0.98304l-0.12288 0 0-119.56224c66.10944 68.13696 225.60768 103.54688 384 103.54688s317.89056-35.4304 384-103.54688l0 119.56224zM896 432.00512l-0.12288 0c0 0.32768 0.12288 0.67584 0.12288 0.98304 0 79.01184-171.9296 143.01184-384 143.01184s-384-64-384-143.01184c0-0.32768 0.12288-0.67584 0.12288-0.98304l-0.12288 0 0-109.95712c83.8656 63.8976 237.60896 93.94176 384 93.94176s300.1344-30.04416 384-93.94176l0 109.95712zM512 352.01024c-212.09088 0-384-64.512-384-143.99488 0-79.54432 171.90912-143.99488 384-143.99488 212.0704 0 384 64.45056 384 143.99488 0 79.48288-171.9296 143.99488-384 143.99488zM768 832c0-17.67424 14.336-32.01024 32.01024-32.01024s32.01024 14.336 32.01024 32.01024c0 17.67424-14.336 32.01024-32.01024 32.01024s-32.01024-14.336-32.01024-32.01024zM768 640c0-17.67424 14.336-32.01024 32.01024-32.01024s32.01024 14.336 32.01024 32.01024c0 17.67424-14.336 32.01024-32.01024 32.01024s-32.01024-14.336-32.01024-32.01024zM768 448c0-17.67424 14.336-32.01024 32.01024-32.01024s32.01024 14.336 32.01024 32.01024c0 17.67424-14.336 32.01024-32.01024 32.01024s-32.01024-14.336-32.01024-32.01024z" p-id="2248"></path>
                         </svg>
                     </a>
-                    <h5 style="margin-top: 10px;">Dataset</h5>
+                    <h5 style="margin-top: 10px; height: 20px;">Dataset</h5>
                 </div>
                 <!-- End of Counter Item -->
             </div>
