--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
     <div class="container" style="padding-left: 20px; padding-right: 20px;">
         <div class="section-content">
             <div class="title-warp">
-                <h2 class="section-title">BLB Dataset</h2>
+                <h2 class="section-title">Dataset</h2>
             </div>
 
             <div class="paper-text">
