--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
             </div>
 
             <div class="paper-text">
-                <textarea class="form-control placeholder" readonly="" style="height: 150px; font-size: 15px; resize: none; overflow: hidden;">@inproceedings{Peng2022BokehMe,
+                <textarea class="form-control placeholder" readonly="" style="height: 155px; resize: none;">@inproceedings{Peng2022BokehMe,
   title = {BokehMe: When Neural Rendering Meets Classical Rendering},
   author = {Peng, Juewen and Cao, Zhiguo and Luo, Xianrui and Lu, Hao and Xian, Ke and Zhang, Jianming},
   booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision and Pattern Recognition (CVPR)},
