--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="paper-author">
         <a href="https://scholar.google.com/citations?hl=en&user=fYC6lCUAAAAJ" target="_blank">Juewen Peng</a><sup>1</sup>,&nbsp;
         <a href="http://english.aia.hust.edu.cn/info/1085/1528.htm" target="_blank">Zhiguo Cao</a><sup>1</sup>,&nbsp;
-        <a href="https://scholar.google.com/" target="_blank">Xianrui Luo</a><sup>1</sup>,&nbsp;
+        <a href="https://scholar.google.com/citations?hl=en&user=tUeWQ5AAAAAJ" target="_blank">Xianrui Luo</a><sup>1</sup>,&nbsp;
         <a href="http://faculty.hust.edu.cn/LUHAO/en/index.htm" target="_blank">Hao Lu</a><sup>1</sup>,&nbsp;
         <a href="https://sites.google.com/site/kexian1991/" target="_blank">Ke Xian</a><sup>1</sup>,&nbsp;
         <a href="https://jimmie33.github.io/" target="_blank">Jianming Zhang</a><sup>2</sup>
@@ -93,7 +93,7 @@
         <sup>2</sup>Adobe Research
     </div>
     <br>
-    <div class="paper-conference">CVPR 2022</div>
+    <div class="paper-conference">CVPR 2022 (Oral Presentation)</div>
     <!-- <br> -->
     <div class="paper-teaser" style="padding-top: 15px;"><img src="img/teaser.jpg" alt="Teaser Image"></div>
     <br>
