--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
             </div>
 
             <div class="paper-text">
-                <p>We release the BLB dataset rendered by Blender 2.93. The dataset contains 10 scenes, and each of them contains an all-in-focus image, a disparity map, a stack of bokeh images with 5 blur parameters and 10 refocused disparities, and a rendering parameter file. We additionally provide 15 corrupted disparity maps (through gaussian blur, dilation, erosion) for each scene. All 3D Blender models come from <a href="https://cloud.blender.org/p/gallery" target="_blank">https://cloud.blender.org/p/gallery</a>. Our BLB dataset can be downloaded from <a href="https://drive.google.com/drive/folders/1URpab6AXQsNTqcBcighF73w5pFlvM0Ej?usp=sharing" target="_blank"><u>Google Drive</u></a> or <a href="https://pan.baidu.com/s/1U0XlFM_84-vVgnXGYz0ncQ?pwd=re8q" target="_blank"><u>Baidu Network Disk</u></a>.
+                <p>We release the BLB dataset rendered by Blender 2.93. The dataset contains 10 scenes, and each of them contains an all-in-focus image, a disparity map, a stack of bokeh images with 5 blur parameters and 10 refocused disparities, and a parameter file. We additionally provide 15 corrupted disparity maps (through gaussian blur, dilation, erosion) for each scene. All 3D Blender models come from <a href="https://cloud.blender.org/p/gallery" target="_blank">https://cloud.blender.org/p/gallery</a>. Our BLB dataset can be downloaded from <a href="https://drive.google.com/drive/folders/1URpab6AXQsNTqcBcighF73w5pFlvM0Ej?usp=sharing" target="_blank"><u>Google Drive</u></a> or <a href="https://pan.baidu.com/s/1U0XlFM_84-vVgnXGYz0ncQ?pwd=re8q" target="_blank"><u>Baidu Network Disk</u></a>.
             </div>
             <br>
             <table width="95%" align="center">
