--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
                     <li>
                         <div style="text-align: center;">
-                            <p>Results on the EBB400 dataset where the images come from <a href="https://arxiv.org/abs/2006.05698" target="_blank">EBB!</a> and the disparity inputs are predicted by <a href="https://arxiv.org/abs/2103.13413" target="_blank">DPT</a>.</p>
+                            <p>Results on the EBB400 dataset where the images come from <a href="https://arxiv.org/abs/2006.05698" target="_blank">EBB!</a> and the disparity inputs are predicted by <a href="https://arxiv.org/abs/1907.01341v3" target="_blank">MiDaS</a>.</p>
 
                             <table width="100%" style="margin-top: 20px; margin-bottom: 5px;">
                                 <tr>
