--- a/index.html
+++ b/index.html
@@ -163,9 +163,12 @@
                 <h2 class="section-title">Video</h2>
             </div>
             <div class="body">
-                <div style="position: relative; padding-top: 55%; text-align: center;">
+                <!-- <div style="position: relative; padding-top: 55%; text-align: center;">
                     <iframe style="position: absolute; top: 2.5%; left: 2.5%; width: 95%; height: 100%;" src="https://www.youtube.com/embed/" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
-                </div>
+                </div> -->
+                <video width="100%" controls>
+                    <source src="img/video.mp4"  type="video/mp4">
+                </video>
             </div>
         </div>
     </div>
