--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <a href="http://english.aia.hust.edu.cn/info/1085/1528.htm" target="_blank">Zhiguo Cao</a><sup>1</sup>,&nbsp;
         <a href="https://scholar.google.com/citations?hl=en&user=tUeWQ5AAAAAJ" target="_blank">Xianrui Luo</a><sup>1</sup>,&nbsp;
         <a href="http://faculty.hust.edu.cn/LUHAO/en/index.htm" target="_blank">Hao Lu</a><sup>1</sup>,&nbsp;
-        <a href="https://sites.google.com/site/kexian1991/" target="_blank">Ke Xian</a><sup>1</sup>,&nbsp;
+        <a href="https://sites.google.com/site/kexian1991/" target="_blank">Ke Xian</a><sup>1&thinsp;*</sup>,&nbsp;
         <a href="https://jimmie33.github.io/" target="_blank">Jianming Zhang</a><sup>2</sup>
     </div>
     <br>
