--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 </li>
                 &nbsp;
                 <li class="nav-item">
-                    <a class="nav-link" href="pdf/BokehMe.pdf" target="_blank">Paper</a>
+                    <a class="nav-link" href="https://github.com/JuewenPeng/BokehMe/pdf/BokehMe.pdf" target="_blank">Paper</a>
                 </li>
                 &nbsp;
                 <li class="nav-item">
-                    <a class="nav-link" href="pdf/BokehMe-supp.pdf" target="_blank">Supp</a>
+                    <a class="nav-link" href="https://github.com/JuewenPeng/BokehMe/pdf/BokehMe-supp.pdf" target="_blank">Supp</a>
                 </li>
                 &nbsp;
                 <li class="nav-item">
