--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <!-- End of Counter Item -->
                 <!-- Counter Item -->
                 <div class="col-md-3 col-sm-6 counter-item">
-                    <a class="paper-icon nav-link" href="pdf/BokehMe.pdf" target="_blank">
+                    <a class="paper-icon nav-link" href="https://github.com/JuewenPeng/BokehMe/tree/main/pdf/BokehMe.pdf" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="white" class="bi bi-file-earmark-text" viewBox="0 0 16 16">
                             <path d="M5.5 7a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z"/>
                             <path d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"/>
@@ -130,7 +130,7 @@
                 <!-- End of Counter Item -->
                 <!-- Counter Item -->
                 <div class="col-md-3 col-sm-6 counter-item">
-                    <a class="paper-icon nav-link" href="pdf/BokehMe-supp.pdf" target="_blank">
+                    <a class="paper-icon nav-link" href="https://github.com/JuewenPeng/BokehMe/tree/main/pdf/BokehMe-supp.pdf" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="white" class="bi bi-file-earmark-plus" viewBox="0 0 16 16">
                             <path d="M8 6.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 .5-.5z"/>
                             <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
