--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </nav>  
 
 
-<section id="abstract" class="bg-white" style="padding-top: 80px;">
+<section id="title" class="bg-white" style="padding-top: 80px;">
   <div class="container text-center" style="padding-left: 20px; padding-right: 20px;">
     <!-- <div class="paper-title">BokehMe: When Neural Rendering Meets<br>Classical Rendering</div> -->
     <h2 style="margin-top: 10px;"><b>BokehMe: When Neural Rendering Meets<br>Classical Rendering</b></h2>
@@ -156,7 +156,7 @@
 <!-- End of Counter Section --> 
 
 
-<section id="method" class="bg-white">
+<section id="video" class="bg-white">
     <div class="container" style="padding-left: 20px; padding-right: 20px;">
         <div class="section-content">
             <div class="title-warp">
@@ -719,7 +719,7 @@
 </section>
 
 
-<section id="dataset" class="bg-grey">
+<section id="citation" class="bg-grey">
     <div class="container" style="padding-left: 20px; padding-right: 20px;">
         <div class="section-content">
             <div class="title-warp">
