--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 
                     <li>
                         <div style="text-align: center;">
-                            <p>Animations on real-world images with different controlling parameters</p>
+                            <p>Animations on real-world images with different controlling parameters.</p>
                             
                             <!-- w_i = 97/w_i/sum(1/w_i) % -->
                             
